--- a/html.html
+++ b/html.html
@@ -1,29 +1,28 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title> TryHard - HTML Tutorial</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 <nav>
   <a class="nav "
-     href="index.html">Home<i class="fa-star"></i></a> |
+     href="index.html">Home<i class="yellow"></i></a> |
   <a class="nav "
-     href="signup.html">Sign up<i class="fa-star"></i></a> |
+     href="signup.html">Sign up<i class="yellow"></i></a> |
   <a class="nav "
-     href="login.html">Log in<i class="fa-star"></i></a> |
+     href="login.html">Log in<i class="yellow"></i></a> |
   <a class="nav "
-     href="profile&progress.html">Profile and Progress <i class="fa-star"></i></a>
+     href="profile&progress.html">Profile and Progress <i class="yellow"></i></a>
   <a class="nav "
-     href="feedback.html">Rate Us <i class="fa-star"></i></a>
+     href="feedback.html">Feedback <i class="yellow"></i></a>
   <a class="nav "
-     href="admin.html">Admin <i class="fa-star"></i></a>
+     href="admin.html">Admin <i class="yellow"></i></a>
 
 </nav>
 <nav>
-  <h1 class="choose-a-topic-to-learn">Choose a lesson to learn:</h1>
+  <h1 class="choose-a-lesson-to-learn">Choose a lesson to learn:</h1>
   <a class="nav current_page" href="html.html">HTML</a>
   <a class="nav " href="css.html">CSS</a>
   <a class="nav " href="javascript.html">JAVASCRIPT</a>
@@ -33,15 +32,14 @@
 
 <header class="yellow-font gray-background">
   <h1 class="yellow-font">HTML Tutorial</h1>
-  <section class="html-css-nav">
-    <ul>
+  <div class="html-css-nav">
+    <ul class="left">
       <li><a href="#introduction">Introduction</a></li>
       <li><a href="#basics">HTML Basics</a></li>
       <li><a href="#elements">HTML Elements</a></li>
       <li><a href="#attributes">HTML Attributes</a></li>
-      <!-- more navigation links for other sections -->
     </ul>
-  </section>
+  </div>
 </header>
 <main class="lesson-container white left-align">
   <h2>HTML tutorial</h2>
@@ -53,7 +51,7 @@
       <p>HTML is the standard markup language for Web pages.</p>
       <p>With HTML you can create your own Website.</p>
       <p>HTML is easy to learn - You will enjoy it!</p>
-      <img src="img/img_chrome.png" alt="image of a website demonstrating h1 and p tags">
+      <img alt="image of a website demonstrating h1 and p tags" src="img/img_chrome.png">
       <hr>
       <h3 class="darkcyan">Why Learn HTML?</h3>
       <p>Learning HTML is essential for anyone interested in web development. It serves as the foundation for
@@ -74,19 +72,79 @@
     </div>
   </section>
 
-  <section id="basics" class="html-intro">
+  <section class="html-intro" id="basics">
     <hr>
     <h2 class="darkcyan">HTML Basics</h2>
     <p>HTML consists of a series of elements that define the structure of a webpage.</p>
-    <!-- more content for HTML basics -->
+    <h3>Key Concepts:</h3>
+    <ul>
+      <li><strong>Elements:</strong> HTML documents are made up of elements, which are the building blocks of a webpage.
+        Each element consists of a start tag, content, and an end tag.
+      </li>
+      <li><strong>Tags:</strong> Tags are used to mark up the start and end of an element. They are enclosed in angle
+        brackets (<code>&lt;</code> and <code>&gt;</code>), and most tags come in pairs (start and end tags).
+      </li>
+      <li><strong>Attributes:</strong> Attributes provide additional information about an element and are added to the
+        start tag. They are made up of a name and a value and are written as name-value pairs, e.g., <code>class="example"</code>.
+      </li>
+      <li><strong>Document Structure:</strong> HTML documents typically consist of an <code>&lt;html&gt;</code> element
+        that contains <code>&lt;head&gt;</code> and <code>&lt;body&gt;</code> elements. The <code>&lt;head&gt;</code>
+        element contains metadata, such as the page title and links to stylesheets, while the <code>&lt;body&gt;</code>
+        element contains the main content of the page.
+      </li>
+    </ul>
+
+    <h3>Basic HTML Skeleton:</h3>
+    <pre><code>&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+&lt;head&gt;
+  &lt;title&gt;Document Title&lt;/title&gt;
+&lt;/head&gt;
+&lt;body&gt;
+  &lt;!-- Page content goes here --&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+  </code></pre>
+
+    <h3>Commonly Used Tags:</h3>
+    <ul>
+      <li><code>&lt;div&gt;</code>: Defines a division or section of the document.</li>
+      <li><code>&lt;p&gt;</code>: Defines a paragraph.</li>
+      <li><code>&lt;h1&gt;</code> to <code>&lt;h6&gt;</code>: Heading elements, with <code>&lt;h1&gt;</code> being the
+        highest level and <code>&lt;h6&gt;</code> the lowest.
+      </li>
+      <li><code>&lt;a&gt;</code>: Defines a hyperlink.</li>
+      <li><code>&lt;img&gt;</code>: Embeds an image into the page.</li>
+      <li><code>&lt;ul&gt;</code> and <code>&lt;ol&gt;</code>: Defines unordered and ordered lists, respectively.</li>
+      <li><code>&lt;li&gt;</code>: Defines a list item.</li>
+      <li><code>&lt;table&gt;</code>: Defines a table.</li>
+      <li><code>&lt;form&gt;</code>: Defines an HTML form for user input.</li>
+      <li><code>&lt;input&gt;</code>: Defines an input control within a form.</li>
+    </ul>
+
+    <h3>Example:</h3>
+    <pre><code>&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+&lt;head&gt;
+  &lt;title&gt;Welcome to My Website&lt;/title&gt;
+&lt;/head&gt;
+&lt;body&gt;
+  &lt;h1&gt;Hello, World!&lt;/h1&gt;
+  &lt;p&gt;This is a paragraph of text.&lt;/p&gt;
+  &lt;a href="https://www.example.com"&gt;Visit Example.com&lt;/a&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+  </code></pre>
+
+    <p>By mastering the basics of HTML, you'll be able to create well-structured and semantically meaningful web
+      pages.</p>
   </section>
 
-  <section id="elements" class="html-intro">
+  <section class="html-intro" id="elements">
     <hr>
     <h2 class="darkcyan">HTML Elements</h2>
     <p>HTML elements are the building blocks of HTML pages.</p>
     <article>
-      <section>
         <h2>Semantic Structure of HTML Elements</h2>
         <p>
           HTML elements are the building blocks of web pages, defining the structure and content of the
@@ -117,7 +175,8 @@
         <p>
           Semantic HTML elements provide valuable information about the role of each section in the webpage,
           aiding search engines and web crawlers in understanding the content structure. Elements like <code>&lt;header&gt;</code>,
-          <code>&lt;footer&gt;</code>, <code>&lt;nav&gt;</code>, <code>&lt;article&gt;</code>, <code>&lt;section&gt;</code>,
+          <code>&lt;footer&gt;</code>, <code>&lt;nav&gt;</code>, <code>&lt;article&gt;</code>,
+          <code>&lt;section&gt;</code>,
           and <code>&lt;aside&gt;</code> convey semantic meaning.
         </p>
         <h3>Block vs. Inline Elements</h3>
@@ -128,7 +187,8 @@
         </p>
         <h3>Common HTML Elements</h3>
         <p>
-          Standard HTML elements serve various purposes, including headings (<code>&lt;h1&gt;</code> to <code>&lt;h6&gt;</code>),
+          Standard HTML elements serve various purposes, including headings (<code>&lt;h1&gt;</code> to
+          <code>&lt;h6&gt;</code>),
           paragraphs (<code>&lt;p&gt;</code>), links (<code>&lt;a&gt;</code>), images
           (<code>&lt;img&gt;</code>), lists (<code>&lt;ul&gt;</code>, <code>&lt;ol&gt;</code>, <code>&lt;li&gt;</code>),
           forms (<code>&lt;form&gt;</code>, <code>&lt;input&gt;</code>, <code>&lt;button&gt;</code>), tables (<code>&lt;table&gt;</code>,
@@ -161,12 +221,10 @@
           <code>&lt;span&gt;</code> tags and apply custom styles and behavior using CSS and JavaScript,
           extending the functionality of standard HTML elements.
         </p>
-      </section>
-
     </article>
   </section>
 
-  <section id="attributes" class="html-intro">
+  <section class="html-intro" id="attributes">
     <hr>
     <h2 class="darkcyan">HTML Attributes</h2>
     <p>HTML attributes provide additional information about HTML elements.</p>
