--- a/profile&progress.html
+++ b/profile&progress.html
@@ -2,53 +2,70 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> TryHard - Profile and Progress</title>
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 <nav>
   <a class="nav "
-     href="index.html">Home<i class="fa-star"></i></a> |
+     href="index.html">Home<i class="yellow"></i></a> |
   <a class="nav "
-     href="signup.html">Sign up<i class="fa-star"></i></a> |
+     href="signup.html">Sign up<i class="yellow"></i></a> |
   <a class="nav "
-     href="login.html">Log in<i class="fa-star"></i></a> |
+     href="login.html">Log in<i class="yellow"></i></a> |
   <a class="nav current_page"
-     href="profile&progress.html">Profile and Progress <i class="fa-star"></i></a>
+     href="profile&progress.html">Profile and Progress <i class="yellow"></i></a>
   <a class="nav "
-     href="feedback.html">Rate Us <i class="fa-star"></i></a>
+     href="feedback.html">Feedback <i class="yellow"></i></a>
   <a class="nav "
-     href="admin.html">Admin <i class="fa-star"></i></a>
+     href="admin.html">Admin <i class="yellow"></i></a>
 
 </nav>
 <nav>
-  <h1 class="choose-a-topic-to-learn">Choose a lesson to learn:</h1>
+  <h1 class="choose-a-lesson-to-learn">Choose a lesson to learn:</h1>
   <a class="nav " href="html.html">HTML</a>
   <a class="nav " href="css.html">CSS</a>
   <a class="nav " href="javascript.html">JAVASCRIPT</a>
   <a class="nav " href="php.html">PHP</a>
   <a class="nav " href="python.html">PYTHON</a>
 </nav>
-<main>
-  <section class="interests white background-form">
-    <h1>Welcome, Visitor!</h1><!--TODO mf2 change to the actual name of the user when logged in-->
-    <h2>Profile Information</h2>
-    <h2>Email:</h2>
-    <p> It seems like you're not logged in</p><!--TODO mf2 change to the actual email of the user when logged in-->
-    <fieldset>
-    <legend>Choose Your Interests:</legend>
-    <label><input name="interests" type="checkbox" value="frontend">Frontend Development</label>
-    <label><input name="interests" type="checkbox" value="backend">Backend Development</label>
-    <label><input name="interests" type="checkbox" value="devops">DevOps</label>
-    <label><input name="interests" type="checkbox" value="fullstackdev">Full Stack Development</label>
+<header>
 
-    <label><input name="interests" type="checkbox" value="html">HTML "programming"</label>
-    <label><input name="interests" type="checkbox" value="css">CSS Tips and Tricks</label>
-    <label><input name="interests" type="checkbox" value="javascript">JavaScript Frameworks</label>
-    <label><input name="interests" type="checkbox" value="php">PHP Database Support</label>
-    <label><input name="interests" type="checkbox" value="python">Python Programming</label>
-    <label for="submit"><input id="submit" type="submit" value="Save"></label>
-    </fieldset>
+  <h1 class="signup-and-login-caption">Profile</h1>
+  <div>
+    It seems like you're not logged in.
+    <br>
+    <br>
+    <a href="signup.html">Click here to sign up if you don't have an account yet</a>
+    <br>
+    <br>
+    <a href="login.html">Click here to log in if you already have an account</a>
+  </div>
+</header>
+<main>
+  <section class="interests white background-form-but-wider-for-profile-section">
+    <h1>Welcome, Visitor!</h1><!--TODO mf2 change to the actual name of the user when logged in-->
+    <div class="left">
+    <h3>Profile Information</h3>
+      <p>Username:</p>
+      <p>Email:</p>
+      <p>Birthdate:</p>
+      <p>Interests:</p>
+      <form class="choose-your-interests" action="#">Choose Your Interests (only works when logged in):
+        <label class="custom-checkbox"><input name="interests" type="checkbox" value="frontend"><span class="checkmark"></span>Frontend Development</label>
+        <label class="custom-checkbox"><input name="interests" type="checkbox" value="backend"><span class="checkmark"></span>Backend Development</label>
+        <label class="custom-checkbox"><input name="interests" type="checkbox" value="devops"><span class="checkmark"></span>DevOps</label>
+        <label class="custom-checkbox"><input name="interests" type="checkbox" value="fullstackdev"><span class="checkmark"></span>Full Stack Development</label>
+
+        <label class="custom-checkbox"><input name="interests" type="checkbox" value="html"><span class="checkmark"></span>HTML "programming"</label>
+        <label class="custom-checkbox"><input name="interests" type="checkbox" value="css"><span class="checkmark"></span>CSS Tips and Tricks</label>
+        <label class="custom-checkbox"><input name="interests" type="checkbox" value="javascript"><span class="checkmark"></span>JavaScript Frameworks</label>
+        <label class="custom-checkbox"><input name="interests" type="checkbox" value="php"><span class="checkmark"></span>PHP Database Support</label>
+        <label class="custom-checkbox"><input name="interests" type="checkbox" value="python"><span class="checkmark"></span>Python Programming</label>
+        <label for="submit"><input id="submit" type="submit" value="Save"></label>
+      </form>
+    </div>
   </section>
 
   <section class="progress-tracker">
