--- a/python.html
+++ b/python.html
@@ -9,33 +9,31 @@
 <body>
 <nav>
   <a class="nav "
-     href="index.html">Home<i class="fa-star"></i></a> |
+     href="index.html">Home<i class="yellow"></i></a> |
   <a class="nav "
-     href="signup.html">Sign up<i class="fa-star"></i></a> |
+     href="signup.html">Sign up<i class="yellow"></i></a> |
   <a class="nav "
-     href="login.html">Log in<i class="fa-star"></i></a> |
+     href="login.html">Log in<i class="yellow"></i></a> |
   <a class="nav "
-     href="profile&progress.html">Profile and Progress <i class="fa-star"></i></a>
+     href="profile&progress.html">Profile and Progress <i class="yellow"></i></a>
   <a class="nav "
-     href="feedback.html">Rate Us <i class="fa-star"></i></a>
+     href="feedback.html">Feedback <i class="yellow"></i></a>
   <a class="nav "
-     href="admin.html">Admin <i class="fa-star"></i></a>
+     href="admin.html">Admin <i class="yellow"></i></a>
 
 </nav>
 <nav>
-  <h1 class="choose-a-topic-to-learn">Choose a lesson to learn:</h1>
+  <h1 class="choose-a-lesson-to-learn">Choose a lesson to learn:</h1>
   <a class="nav " href="html.html">HTML</a>
   <a class="nav " href="css.html">CSS</a>
   <a class="nav " href="javascript.html">JAVASCRIPT</a>
   <a class="nav " href="php.html">PHP</a>
   <a class="nav current_page" href="python.html">PYTHON</a>
 </nav>
-<main class="lesson-container white left-align">
-  <section>
-    <h2>Python tutorial</h2>
-      <p>Python is a high-level, interpreted programming language known for its simplicity and readability. It is widely used for various purposes, including web development, data analysis, artificial intelligence, and scientific computing.</p>
-      <p>In this tutorial, you will learn the fundamentals of Python programming, including:</p>
-    <ul>
+<header class="yellow-font gray-background">
+  <h1>Python tutorial</h1>
+  <section class="html-css-nav">
+    <ul class="left black-font">
       <li><a href="#variables-data-types">Variables and Data Types</a></li>
       <li><a href="#operators-expressions">Operators and Expressions</a></li>
       <li><a href="#control-flow">Control Flow</a> (if-else statements, loops)</li>
@@ -43,6 +41,16 @@
       <li><a href="#data-structures">Data Structures</a> (lists, tuples, dictionaries)</li>
       <li><a href="#file-handling">File Handling</a></li>
       <li><a href="#error-handling">Error Handling</a></li>
+    </ul>
+  </section>
+</header>
+<main class="lesson-container white left-align">
+  <section>
+    <h2>Python tutorial</h2>
+      <p>Python is a high-level, interpreted programming language known for its simplicity and readability. It is widely used for various purposes, including web development, data analysis, artificial intelligence, and scientific computing.</p>
+      <p>In this tutorial, you will learn the fundamentals of Python programming, including:</p>
+    <ul>
+
     </ul>
   </section>
   <section id="variables-data-types">
