--- a/python.html
+++ b/python.html
@@ -100,7 +100,7 @@
       <li><a href="mailto:meowuwuka@calculus.hu">meowuwuka@calculus.hu</a></li>
       <li><a href="https://www.facebook.com/meowuwuka">facebook.com/meowuwuka</a></li>
       <li><a href="https://www.linkedin.com/in/meowuwuka">linkedin.com/meowuwuka</a></li>
-      <li><a href="https://www.meowuwuka.com">meowuwuka.com</a></li>
+      <li><a href="https://www.instagram.com/meowuwuka">instagram.com/meowuwuka</a></li>
     </ul>
     <p>&copy; 2024 - 2024 TryHard33. All rights reserved.</p>
   </section>
