--- a/css.html
+++ b/css.html
@@ -90,22 +90,22 @@
       demo. Adjust the size and spacing of the box to see how it affects the layout.</p>
     <img alt="A picture showing the css box model." class="display-block seventy-five-percent-width"
          src="img/box_model.png">
-    <!-- TODO embed a box model demo here -->
+    <!-- TODO mf2 embed a box model demo here -->
 
     <h3>3. Flexbox Playground</h3>
     <p>Play around with Flexbox properties to create different layouts and arrangements of elements. Drag and drop
       elements to see how they respond to changes in flex container and flex item properties.</p>
-    <!-- TODO embed a Flexbox playground here -->
+    <!-- TODO mf2 embed a Flexbox playground here -->
 
     <h3>4. CSS Grid Builder</h3>
     <p>Build custom grid layouts using CSS Grid Layout with this interactive tool. Specify the number of rows and
       columns, and drag elements into the grid to position them as desired.</p>
-    <!-- TODO embed a CSS Grid builder tool here -->
+    <!-- TODO mf2  embed a CSS Grid builder tool here -->
 
     <h3>5. Responsive Design Simulator</h3>
     <p>Test the responsiveness of your website by simulating different screen sizes and orientations. See how your
       layout adjusts to accommodate different devices.</p>
-    <!-- TODO embed a responsive design simulator here -->
+    <!-- TODO mf2  embed a responsive design simulator here -->
 
     <p>These interactive examples provide a hands-on way to explore CSS concepts and techniques. Click on the links
       to start experimenting!</p>
